force-app/main/default/objects/Inspection_Photo_Download__c/Inspection_Photo_Download__c.object-meta.xml
<CustomObject>
    <label>Inspection Photo Download</label>
    <nameField>
        <displayFormat>Photo-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Photo Downloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>