force-app/main/default/objects/Inspection_Photo_Download__c/fields/Floorwalker__c.field-meta.xml
<CustomField>
    <fullName>Floorwalker__c</fullName>
    <formula>InspectorDailyReport__r.CreatedBy.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floorwalker</label>
    <type>Text</type>
</CustomField>