force-app/main/default/objects/Inspection_Photo_Download__c/fields/InspectorDailyReport__c.field-meta.xml
<CustomField>
    <fullName>InspectorDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InspectorDailyReport</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Inspection Photo Downloads</relationshipLabel>
    <relationshipName>Inspection_Photo_Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>