force-app/main/default/objects/Inspection_Photo_Download__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>问题类型 Item Type(CheckItem) / Sample Display</description>
    <label>Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>