force-app/main/default/objects/Inspection_Photo_Download__c/fields/PhotoId__c.field-meta.xml
<CustomField>
    <fullName>PhotoId__c</fullName>
    <description>图片ID</description>
    <label>PhotoId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>