force-app/main/default/objects/Inspection_Photo_Download__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Inspection Photo Downloads</relationshipLabel>
    <relationshipName>Inspection_Photo_Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>